tests/ui/plyread_field_missing_default.stderr
error[E0277]: the trait bound `NotDefault: Default` is not satisfied
  --> tests/ui/plyread_field_missing_default.rs:18:10
   |
18 | #[derive(PlyRead)]
   |          ^^^^^^^ the trait `Default` is not implemented for `NotDefault`
   |
   = help: see issue #48214
   = note: this error originates in the derive macro `PlyRead` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider annotating `NotDefault` with `#[derive(Default)]`
   |
 4 + #[derive(Default)]
 5 | struct NotDefault(u8);
   |
